classDiagram

    class FeatureFlagsDemo {
        +main() static void
    }

    class FeatureFlagServiceImpl {
        -final Map~String,Feature~ features
        +createFeature() void
        +enableFeature() void
        +disableFeature() void
        +isFeatureEnabled() boolean
        +addRolloutStrategy() void
        +getAllFeatures() List~Feature~
    }

    class GroupTargetingRule {
        -final String targetGroup
        +matches() boolean
    }

    class TargetingRule {
        <<interface>>
        +evaluate(context) boolean
    }

    class AuditLog {
        -final String featureId
        -final String userId
        -final boolean enabled
        -final LocalDateTime timestamp
    }

    class RolloutStrategy {
        -final String type
        -final int percentage
        -final String targetGroup
        +getType() String
        +getPercentage() int
        +getTargetGroup() String
    }

    class User {
        -final String id
        -final String email
        -final String group
        +getId() String
        +getGroup() String
    }

    class Feature {
        -final String id
        -final String name
        -boolean enabled
        -final Map~String,RolloutStrategy~ strategies
        +enable() void
        +disable() void
        +addStrategy() void
        +getId() String
        +getName() String
        +isEnabled() boolean
        +getStrategies() Map<String, RolloutStrategy>
    }

    class FeatureToggle {
        -final String id
        -final String name
        -boolean enabled
        -LocalDateTime enabledAt
        -LocalDateTime disabledAt
        +enable() void
        +disable() void
        +getId() String
        +isEnabled() boolean
    }

    class FeatureFlagService {
        <<interface>>
        +isEnabled(flagName, userId) boolean
        +createFlag(flag) void
        +updateFlag(flag) void
    }

    AuditLog --> Feature
    AuditLog --> User
    Feature "1" --> "*" RolloutStrategy
    GroupTargetingRule --> User
    FeatureFlagServiceImpl "1" --> "*" Feature
    FeatureFlagServiceImpl --> User
    FeatureFlagServiceImpl --> RolloutStrategy
